ARROW-14583: [C++] Initialize state in GroupByNode when no batches processed